--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,8 +1,3 @@
-
-$font-main: 'Lato', sans-serif;
-$font-weight-s: 300;
-$font-weight-m: 700;
-
 /* ============================================= */
 /*              Base styles                      */
 /* ============================================= */
@@ -47,6 +42,6 @@ a {
   font-style: italic;
   margin-left: 20px;
   padding-left: 20px;
-  border-left: 8px solid #58e1c1;
+  border-left: 8px solid $color-primary;
   border-radius: 5px;
 }
