--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,7 @@
 //* Partial Imports//*
 
-@import 'base/_index', 'component/_index','utilities/_index';
+@import 'utilities/index';
+@import 'base/index';
+@import 'component/index';
       
 
