--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,3 +1,8 @@
+//Base Styles//
+
+$font-main: 'Lato', sans-serif;
+$font-weight-s: 300;
+$font-weight-m: 700;
 
 //Color Variables//
 
@@ -14,4 +19,4 @@ $button-color-info: #927bc1;
 
 //Media Query Breakpoints//
 
-$large-screens: 768px;
+$break-m: 768px;
